# BluePad

./: -  .gitignore  CLAUDE.md  README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: linux-build.yml
docs/: QA_TEST.md  SANDBOX_TESTING.md  markdown-test.md  marketing-seo-handoff.md  test-sample.json  test-sample.txt  test-sample.yaml  구매안전서비스_비적용_소명서.md  기능정의서.md  마케팅-런칭.md  샌드박스-테스트.md  작업지시-GA4-purchase-2026-06-22.md  측정기반-정보-2026-06-22.md  코워크-마스터인계.md
docs/sample/: sample.css  sample.html  sample.js  sample.json  sample.md  sample.scss  sample.ts  sample.tsx  sample.txt  sample.yaml
docs/screenshots/: demo.md
docs/work-log/: 2026-06-06.md  2026-06-11.md  2026-06-12.md  2026-06-16.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  2026-06-26.md  2026-06-27.md  2026-06-28.md  2026-06-29-blog-autopublish.md  2026-06-29.md  2026-06-30-codex-색인-주간모니터링.md  2026-07-01.md  SEO-성장원장.md  협조요청-code.md
docs/분석/: README-주간리포트-셋업.md
docs/차별점/: 차별점-템플릿.md
landing/: _redirects  index.html  llms.txt  robots.txt  sitemap.xml
landing/admin/: index.html
landing/blog/: best-markdown-editors-2026.html  focus-mode-distraction-free-writing.html  index.html  lightweight-note-app-windows.html  markdown-editor-for-developers.html  (+2 more)
scripts/: backup-d1.sh  cron-sonnet-task.md  deploy-blog.ps1  deploy.sh
src/: App.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.sandbox.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/i18n/: en.ts  (+3 more)
(+87 files in other folders)
